--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "react-scripts": "1.1.1"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
     "history": "^4.6.3",
-    "marked": "^0.3.6",
+    "lodash": "^4.17.11",
+    "marked": "^0.6.2",
+    "material-ui-next-pickers": "0.0.20",
+    "moment": "^2.24.0",
     "prop-types": "^15.5.10",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
@@ -19,6 +24,7 @@
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.1",
+    "styled-components": "^4.2.0",
     "superagent": "^3.8.2",
     "superagent-promise": "^1.1.0"
   },
